[package]
name = "issue-5442"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
libp2p = { version = "0.54", git = "https://github.com/libp2p/rust-libp2p", rev = "8f42576e1", features = [
    "ping",
    "wasm-bindgen",
    "webtransport-websys",
] }
libp2p-ping = "0.44.0"
multiaddr = "0.18.1"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.41"
wasm-bindgen-test = "0.3.42"
web-sys = { version = "0.3.68", features = ["Response", "Window"] }

[patch.crates-io]
#futures-timer = { git = "https://github.com/oblique/futures-timer", branch = "fix/wasm-panic" }

[patch."https://github.com/libp2p/rust-libp2p"]
#libp2p = { git = "https://github.com/oblique/rust-libp2p", branch = "fix/issue-5442" }
